# llm-social-agent

./: .gitignore  MODELS.md  README.md  STYLE.md  main.py  pyproject.toml  requirements.txt  summary.txt
config/: settings.yaml
src/: __init__.py  main.py
src/analytics/: __init__.py
src/core/: __init__.py  config_loader.py  llm_client.py  orchestrator.py  publisher.py  review.py
src/db/: __init__.py  models.py
src/platform_clients/: __init__.py  linkedin_client.py  threads_client.py  x_client.py
src/telegram_social_agent/: __init__.py  __main__.py  config.py  directives.py  models.py  models_loader.py  orchestrator.py  prompts.py  publishing.py  scheduler.py  style_loader.py  telegram_bot.py  utils.py  validators.py
src/telegram_social_agent/llm/: __init__.py  router.py  types.py
src/telegram_social_agent/llm/providers/: anthropic_provider.py  base.py  gemini_provider.py  openai_provider.py
src/telegram_social_agent/platform_clients/: __init__.py  linkedin_client.py  threads_client.py  x_client.py
src/tools/: __init__.py  content_tools.py  data_tools.py  file_tools.py  validation_tools.py
src/tools/action_tools/: __init__.py
tests/: test_data_tools_hash.py  test_db_migration_smoke.py  test_entries_dedupe.py  test_orchestrator_llm_fallback.py  test_platform_clients.py  test_platform_clients_live_flow.py  test_provider_env_aliases.py  test_publish_clients_dry_run.py  test_routing_fallback.py  test_validator_truncation.py
